@@ -1,3 +1,10 @@
+2008-03-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-device-wired.c
+		- (add_default_wired_connection): no longer add a default wired
+			connection; distros should create a system setting for wired and
+			let the system settings service handle it
+
 2008-03-07  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
